--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,7 +11,7 @@
         </div>
     </div>
     <script type="text/javascript">
-        var socket = io.connect('http://localhost');
+        var socket = io.connect('<%=l_url%>');
         $("#chatInput").keyup(function(event) {
             if (event.which == 13) {
                 socket.emit('fromclient',{msg:$('#chatInput').val()});
